force-app/main/default/objects/Client_References_Selected__c/Client_References_Selected__c.object-meta.xml
<CustomObject>
    <description>client references that were selected from the reference request.  Linked to Opty needing the reference, linked to the Acct,Ctct of client giving the reference</description>
    <label>Client References Selected</label>
    <nameField>
        <displayFormat>CR-Sel-{0000}</displayFormat>
        <label>CR Selected</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client References Selected</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>