force-app/main/default/objects/Client_References_Selected__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Reference Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client References Selected</relationshipLabel>
    <relationshipName>Client_Referrals_Selected</relationshipName>
    <type>Lookup</type>
</CustomField>