force-app/main/default/objects/Client_References_Selected__c/fields/Client_Reference_Request__c.field-meta.xml
<CustomField>
    <fullName>Client_Reference_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Reference Request</label>
    <referenceTo>Client_Reference_Requests__c</referenceTo>
    <relationshipLabel>Client References Selected</relationshipLabel>
    <relationshipName>Client_References_Selected</relationshipName>
    <type>Lookup</type>
</CustomField>