force-app/main/default/objects/Client_References_Selected__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Reference Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Client References Selected</relationshipLabel>
    <relationshipName>Client_Referrals_Selected</relationshipName>
    <type>Lookup</type>
</CustomField>