force-app/main/default/objects/Client_References_Selected__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Created per Case 29750504</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Notes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>