force-app/main/default/objects/Client_References_Selected__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Client_Referrals_Selected</relationshipName>
    <type>Lookup</type>
</CustomField>