force-app/main/default/objects/Client_References_Selected__c/fields/Rejected_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Reason__c</fullName>
    <description>reason given by VoC team to reject this client reference request</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Rejected Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>