force-app/main/default/objects/Client_References_Selected__c/fields/Submitter__c.field-meta.xml
<CustomField>
    <fullName>Submitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>running User sales rep that submitted request and selected reference</description>
    <label>Submitter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Client_Referrals_Selected</relationshipName>
    <type>Lookup</type>
</CustomField>