force-app/main/default/objects/Client_References_Selected__c/fields/Used_Reminder_Email__c.field-meta.xml
<CustomField>
    <fullName>Used_Reminder_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>auto check this box when selection is approved, used to send reminder email to sales rep to fill in if Actually Used reference</description>
    <label>Used Reminder Email</label>
    <type>Checkbox</type>
</CustomField>