force-app/main/default/objects/Client_References_Selected__c/fields/VoC_Indicator__c.field-meta.xml
<CustomField>
    <fullName>VoC_Indicator__c</fullName>
    <formula>TEXT(Client_Reference__r.VoC_Indicator__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VoC Indicator</label>
    <type>Text</type>
</CustomField>