force-app/main/default/objects/Client_References_Selected__c/validationRules/Client_Reference_Not_Used_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Client_Reference_Not_Used_Reason</fullName>
    <active>true</active>
    <description>user must fill in Not Used Reason if they picked No for Actually Used</description>
    <errorConditionFormula>ISBLANK(TEXT(Not_Used_Reason__c)) &amp;&amp;   ISPICKVAL(Actually_Used__c, &apos;No&apos;)</errorConditionFormula>
    <errorDisplayField>Not_Used_Reason__c</errorDisplayField>
    <errorMessage>You must fill in a Not Used Reason if you did not actually use this reference.</errorMessage>
</ValidationRule>