force-app/main/default/objects/Client_References_Selected__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Submitter__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Client_Reference_Request__c</columns>
    <columns>Client_Reference__c</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>VoC_Indicator__c</columns>
    <columns>Rejected_Reason__c</columns>
    <columns>Actually_Used__c</columns>
    <columns>Not_Used_Reason__c</columns>
    <columns>Used_Reminder_Email__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Prospect_Client_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>