force-app/main/default/objects/Client_References_Selected__c/listViews/All2.listView-meta.xml
<ListView>
    <fullName>All2</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Submitter__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Client_Reference_Request__c</columns>
    <columns>Client_Reference__c</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>VoC_Indicator__c</columns>
    <columns>Rejected_Reason__c</columns>
    <columns>Actually_Used__c</columns>
    <columns>Used_Reminder_Email__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VoC_Indicator__c</field>
        <operation>equals</operation>
        <value>Out for Reference</value>
    </filters>
    <label>Out for Reference</label>
</ListView>