force-app/main/default/objects/Client_References_Selected__c/listViews/Created_since_rollout_3_26.listView-meta.xml
<ListView>
    <fullName>Created_since_rollout_3_26</fullName>
    <columns>NAME</columns>
    <columns>Client_Reference__c</columns>
    <columns>Client_Reference_Request__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Submitter__c</columns>
    <columns>Opportunity__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Status__c</columns>
    <columns>VoC_Indicator__c</columns>
    <columns>Rejected_Reason__c</columns>
    <columns>Actually_Used__c</columns>
    <columns>Used_Reminder_Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>greaterThan</operation>
        <value>CR-Sel-0350</value>
    </filters>
    <label>Created since rollout 3/26</label>
</ListView>