force-app/main/default/objects/Client_References_Selected__c/listViews/Created_Today.listView-meta.xml
<ListView>
    <fullName>Created_Today</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Client_Reference__c</columns>
    <columns>Client_Reference_Request__c</columns>
    <columns>Status__c</columns>
    <columns>Submitter__c</columns>
    <columns>Prospect_Client_Number__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Opportunity__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>VoC_Indicator__c</columns>
    <columns>Rejected_Reason__c</columns>
    <columns>Actually_Used__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY,LAST_WEEK,THIS_WEEK</value>
    </filters>
    <label>Created Today</label>
</ListView>