force-app/main/default/objects/Client_References_Selected__c/listViews/Follow_Up_View_for_Non_Sales_Request.listView-meta.xml
<ListView>
    <fullName>Follow_Up_View_for_Non_Sales_Request</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Submitter__c</columns>
    <columns>VoC_Indicator__c</columns>
    <columns>Status__c</columns>
    <columns>Client_Reference__c</columns>
    <columns>Account__c</columns>
    <columns>Client_Reference_Request__c</columns>
    <columns>Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <label>Follow Up View for Non-Sales Request</label>
</ListView>