force-app/main/default/objects/Client_References_Selected__c/listViews/May_Reporting_2018.listView-meta.xml
<ListView>
    <fullName>May_Reporting_2018</fullName>
    <columns>Submitter__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Client_Reference_Request__c</columns>
    <columns>Client_Reference__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Prospect_Client_Number__c</columns>
    <columns>Status__c</columns>
    <columns>VoC_Indicator__c</columns>
    <columns>Rejected_Reason__c</columns>
    <columns>Actually_Used__c</columns>
    <columns>Not_Used_Reason__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Used_Reminder_Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>5/1/2018 12:00 AM</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessOrEqual</operation>
        <value>5/31/2018 12:00 AM</value>
    </filters>
    <label>May Reporting 2018</label>
</ListView>