force-app/main/default/objects/Client_References_Selected__c/listViews/Missing_opportunities.listView-meta.xml
<ListView>
    <fullName>Missing_opportunities</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Approved_Date__c</columns>
    <columns>Prospect_Client_Number__c</columns>
    <columns>Submitter__c</columns>
    <columns>Account__c</columns>
    <columns>Client_Reference__c</columns>
    <columns>Client_Reference_Request__c</columns>
    <columns>VoC_Indicator__c</columns>
    <columns>Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity__c</field>
        <operation>equals</operation>
    </filters>
    <label>Missing opportunities</label>
</ListView>