force-app/main/default/objects/Client_References_Selected__c/listViews/Thank_you_Post_Cards.listView-meta.xml
<ListView>
    <fullName>Thank_you_Post_Cards</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>VoC_Indicator__c</columns>
    <columns>Status__c</columns>
    <columns>Approved_Date__c</columns>
    <columns>Actually_Used__c</columns>
    <columns>Prospect_Client_Number__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Actually_Used__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <label>Thank you Post Cards</label>
</ListView>