force-app/main/default/objects/Client_References_Selected__c/listViews/Waiting_for_Approval1.listView-meta.xml
<ListView>
    <fullName>Waiting_for_Approval1</fullName>
    <columns>NAME</columns>
    <columns>Prospect_Client_Number__c</columns>
    <columns>Client_Reference__c</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Actually_Used__c</columns>
    <columns>Not_Used_Reason__c</columns>
    <columns>Submitter__c</columns>
    <columns>Opportunity__c</columns>
    <columns>VoC_Indicator__c</columns>
    <columns>Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Approved_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Approved requests</label>
</ListView>